toList() (#5649)