@@ -3,7 +3,6 @@ package no.nav.foreldrepenger.ytelse.beregning.tilbaketrekk;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import no.nav.foreldrepenger.behandlingslager.behandling.beregning.BeregningsresultatAndel;
 
@@ -17,7 +16,7 @@ public class FinnKorresponderendeBeregningsresultatAndel {
         var korresponderendeAndeler = haystack.stream()
             .filter(andel -> andel.erBrukerMottaker() == erBrukerMottaker)
             .filter(andel -> Objects.equals(andel.getAktivitetOgArbeidsforholdNøkkel(), forrigeAndelAktivitetsnøkkel))
-            .collect(Collectors.toList());
+            .toList();
         if (korresponderendeAndeler.size() > 1) {
             throw new IllegalArgumentException("Forventet å finne maks en korresponderende BeregningsresultatAndel " + forrigeAndelAktivitetsnøkkel
                 + ". Antall matchende aktiviteter var " + korresponderendeAndeler.size());
