@@ -3,7 +3,6 @@ package no.nav.foreldrepenger.domene.uttak.fastsetteperioder.grunnlagbyggere;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
@@ -85,7 +84,7 @@ public class RevurderingGrunnlagBygger {
     }
 
     private List<FastsattUttakPeriodeAktivitet> map(List<UttakResultatPeriodeAktivitetEntitet> aktiviteter) {
-        return aktiviteter.stream().map(a -> map(a)).collect(Collectors.toList());
+        return aktiviteter.stream().map(this::map).toList();
     }
 
     private FastsattUttakPeriodeAktivitet map(UttakResultatPeriodeAktivitetEntitet aktivitet) {
